--- a/requirements.txt
+++ b/requirements.txt
@@ -25,7 +25,7 @@ exceptiongroup==1.3.0
 executing==2.2.0
 fastjsonschema==2.21.1
 filelock==3.18.0
-Flask==6.0.1
+Flask==3.1.2
 flask-cors==6.0.1
 Flask-Login==0.6.3
 Flask-SQLAlchemy==3.1.1
@@ -89,6 +89,7 @@ pure_eval==0.2.3
 pyarrow==21.0.0
 pycparser==2.22
 Pygments==2.19.2
+pymysql
 pyparsing==3.2.3
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
@@ -131,3 +132,7 @@ webencodings==0.5.1
 websocket-client==1.8.0
 Werkzeug==3.1.3
 zipp==3.23.0
+
+# extras recomendados
+alembic==1.14.0
+email-validator==2.2.0
