--- a/requirements.txt
+++ b/requirements.txt
@@ -28,6 +28,7 @@ filelock==3.18.0
 Flask==3.1.2
 flask-cors==6.0.1
 Flask-Login==0.6.3
+Flask-Migrate==4.0.7
 Flask-SQLAlchemy==3.1.1
 flask-session==0.8.0
 fonttools==4.59.0
