--- a/requirements.txt
+++ b/requirements.txt
@@ -133,7 +133,7 @@ webencodings==0.5.1
 websocket-client==1.8.0
 Werkzeug==3.1.3
 zipp==3.23.0
-
-# extras recomendados
 alembic==1.14.0
 email-validator==2.2.0
+gunicorn==21.2.0
+python-dotenv==1.0.0
