--- a/tiempocheck_extension/manifest.json
+++ b/tiempocheck_extension/manifest.json
@@ -14,7 +14,8 @@
 
   "host_permissions": [
     "<all_urls>",     
-    "http://localhost:5000/"
+    "http://localhost:5000/*",
+    "http://127.0.0.1:5000/*"
   ],
   
   "background": {
@@ -48,5 +49,9 @@
       "http://localhost:5000/*",
       "http://127.0.0.1:5000/*"
     ]
+  },
+
+  "content_security_policy": {
+    "extension_pages": "script-src 'self'; object-src 'self'; connect-src http://localhost:5000 http://127.0.0.1:5000 https://*"
   }
 }
